force-app/main/default/objects/Payment_Term_Code__c/Payment_Term_Code__c.object-meta.xml
<CustomObject>
    <description>The mapping of the Payment Term codes, Description, payment split% based on Edition</description>
    <label>Payment Term Code</label>
    <nameField>
        <displayFormat>PTC-{000000}</displayFormat>
        <label>Payment Term Code ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Payment Term Codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>