force-app/main/default/objects/Payment_Term_Code__c/fields/Edition__c.field-meta.xml
<CustomField>
    <fullName>Edition__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Edition</description>
    <label>Edition</label>
    <referenceTo>Edition__c</referenceTo>
    <relationshipLabel>Payment Term Codes</relationshipLabel>
    <relationshipName>Payment_Term_Codes</relationshipName>
    <type>Lookup</type>
</CustomField>