force-app/main/default/objects/Payment_Term_Code__c/fields/Payment_Split_Percentage__c.field-meta.xml
<CustomField>
    <fullName>Payment_Split_Percentage__c</fullName>
    <description>Payment Split Percentage</description>
    <label>Payment Split Percentage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Payment_Schedule</valueSetName>
    </valueSet>
</CustomField>