force-app/main/default/objects/Payment_Term_Code__c/fields/Payment_Term_Code__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Code__c</fullName>
    <description>Payment Term Code</description>
    <label>Payment Term Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>