force-app/main/default/objects/Payment_Term_Code__c/fields/Payment_Term_Description__c.field-meta.xml
<CustomField>
    <fullName>Payment_Term_Description__c</fullName>
    <description>Payment Term Description</description>
    <label>Payment Term Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>